# gitkban

./: Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
src/: github.rs  kanbanize.rs  logic.rs  main.rs
